v0.3.1.0 added functionality of import prices csv file.  Remove dependency of org.ccil.cowan.tagsoup, fixed a couple deprecated methods.  Fixed a bug of not assigning transfer account in transfer reminder transactions.